2006-05-15  Jim Meyering  <jim@meyering.net>

	Avoid the expense of an fstat, when possible.
	* fts.c (O_NOFOLLOW, STREQ): Define.
	(diropen_fd): Remove function.  Merge it into sole caller...
	(diropen): ...here.  Use O_NOFOLLOW when appropriate.
	(fts_safe_changedir): Call fstat for dev/inode check, only if the
	previous open/openat call may have opened the wrong directory.

2006-05-13  Jim Meyering  <jim@meyering.net>

	* xfts.c (xfts_open): Always use FTS_CWDFD.

	Restore the parts of fts that were removed on 2006-01-17, so that
	it's easier for legacy applications designed for the version
	of fts in glibc or BSD to convert to this more robust version.
	Add a new mode, FTS_CWDFD, by which to enable the improved
	(openat- based -- aka no-chdir) semantics.
	* fts_.h (FTS_CWDFD): Define.  Callers must use this fts_open
	option to enable the more robust behavior.
	(FTS_OPTIONMASK): Widen accordingly.
	* fts.c: Restore removed code, reverting the default behavior.

2006-05-11  Jim Meyering  <jim@meyering.net>

	* sha1.c (sha1_buffer): Correct comment: s/MD5/SHA1/.  From James Lemley.

2006-04-25  Paul Eggert  <eggert@cs.ucla.edu>

	* getdate.y (get_date): When adding relative date, start with the
	initial time, not with the result of the first mktime call.

2006-04-17  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c: Include "filemode.h" first, to test the interface.
	Assume that filemode.h includes sys/types.h and sys/stat.h.
	(HAVE_ST_DM_MODE): New macro, moved here from ls.c.
	(ftypelet): Reorder to put common cases first, for efficiency.
	Add 'P', 'w'.  Remove 'M', since it's now the caller's responsibility
	to do 'M'.
	(strmode): Renamed from mode_string, and now stores 12 bytes instead
	of 10, for compatibility with FreeBSD.  All callers changed.
	(filemodestring): Now stores 12 bytes instead of 10, and sets file types
	that can't be deduced solely from st_mode.  First arg is now a const
	pointer.